--- a/Math_311_solve_systems_using_computation_and_rref.ipynb
+++ b/Math_311_solve_systems_using_computation_and_rref.ipynb
@@ -50,10 +50,9 @@
       "metadata": {
         "id": "AHRXKhal_Wcj",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ecb61a93-77dc-458a-d39c-0ecb6cba3137"
+        "outputId": "c50c1185-bd41-444a-fa36-a824c4c68fb9"
       },
       "source": [
         "lll = \" correctly!\"\n",
@@ -99,10 +98,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             ">> The page  loaded  correctly!\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -383,11 +382,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uEUzkFMc-NrD"
+        "id": "uEUzkFMc-NrD",
+        "outputId": "914f8be2-363a-48d3-991c-317d07069123",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
+      "source": [
+        "A_a = np.matrix([[2, 2],\n",
+        "                 [1, -4]])\n",
+        "\n",
+        "b_a = np.matrix([[5], [0]])\n",
+        "\n",
+        "M_a = np.c_[A_a,b_a]\n",
+        "\n",
+        "rref(M_a)"
+      ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1. , 0. , 2. ],\n",
+              "       [0. , 1. , 0.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -405,11 +429,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rgpL6ig2-QJf"
+        "id": "rgpL6ig2-QJf",
+        "outputId": "e4ab444f-ea07-4018-c869-56a7bdc46cdb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
+      "source": [
+        "A_b = np.matrix([[-1, 1],\n",
+        "                 [1, 1]])\n",
+        "\n",
+        "b_b = np.matrix([[1], [2]])\n",
+        "\n",
+        "M_b = np.c_[A_b,b_b]\n",
+        "\n",
+        "rref(M_b)"
+      ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1. , 0. , 0.5],\n",
+              "       [0. , 1. , 1.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -427,11 +476,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Fm9M0Pg-S_F"
+        "id": "4Fm9M0Pg-S_F",
+        "outputId": "07b596a5-ef5f-44d3-9b16-eeb3ed7ba02a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
+      "source": [
+        "A_c = np.matrix([[1, -3, 1],\n",
+        "                 [1, 1, 2]])\n",
+        "\n",
+        "b_c = np.matrix([[1], [14]])\n",
+        "\n",
+        "M_c = np.c_[A_c,b_c]\n",
+        "\n",
+        "rref(M_c)"
+      ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1.  ,  0.  ,  1.75, 10.75],\n",
+              "       [-0.  ,  1.  ,  0.25,  3.25]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -449,11 +523,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aoJNak7k-VlQ"
+        "id": "aoJNak7k-VlQ",
+        "outputId": "55bfb350-b6d7-43bf-bd4f-3def90829a62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
+      "source": [
+        "A_d = np.matrix([[-1, -1],\n",
+        "                 [-3, -3]])\n",
+        "\n",
+        "b_d = np.matrix([[1], [2]])\n",
+        "\n",
+        "M_d = np.c_[A_d,b_d]\n",
+        "\n",
+        "rref(M_d)"
+      ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 0.],\n",
+              "       [0., 0., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -470,11 +569,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "98NNaKMX-Xiq"
+        "id": "98NNaKMX-Xiq",
+        "outputId": "fddc493b-5863-4e60-9555-08295ee3500a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
+      "source": [
+        "A_e = np.matrix([[0, 4, 1],\n",
+        "                 [2, -2, 1],\n",
+        "                 [1, 0, 1],\n",
+        "                 [1, 1, -1]])\n",
+        "\n",
+        "b_e = np.matrix([[20], [0], [5], [10]])\n",
+        "\n",
+        "M_e = np.c_[A_e,b_e]\n",
+        "\n",
+        "rref(M_e)"
+      ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 0., 0., 5.],\n",
+              "       [0., 1., 0., 5.],\n",
+              "       [0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -492,20 +620,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r3WB6JRn-b5W"
+        "id": "r3WB6JRn-b5W",
+        "outputId": "f4e3e825-3281-4014-cca3-f893bf3237e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
+      "source": [
+        "A_f = np.matrix([[2, 0, 1, 1],\n",
+        "                 [0, 1, 0, -1],\n",
+        "                 [3, 0, -1, -1],\n",
+        "                 [4, 1, 2, 1]])\n",
+        "\n",
+        "b_f = np.matrix([[5], [-1], [0], [9]])\n",
+        "\n",
+        "M_f = np.c_[A_f,b_f]\n",
+        "\n",
+        "rref(M_f)"
+      ],
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "769dXoztlBcx"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1.,  0.,  0.,  0.,  1.],\n",
+              "       [-0.,  1.,  0., -1., -1.],\n",
+              "       [-0., -0.,  1.,  1.,  3.],\n",
+              "       [ 0.,  0.,  0.,  0.,  0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     }
   ]
 }
